--- a/.github/workflows/gitleaks.yaml
+++ b/.github/workflows/gitleaks.yaml
@@ -5,10 +5,9 @@ jobs:
   uses: actions/checkout@v3
   with:
     fetch-depth: 0
-
-- name: Run Gitleaks
-  id: gitleaks
-  uses: DariuszPorowski/github-action-gitleaks@v2
-  with:
-    report_format: sarif
-    fail: false
+  - name: Run Gitleaks
+    id: gitleaks
+    uses: DariuszPorowski/github-action-gitleaks@v2
+    with:
+      report_format: sarif
+      fail: true
