--- a/.github/workflows/gitleaks.yaml
+++ b/.github/workflows/gitleaks.yaml
@@ -3,6 +3,7 @@ on: workflow_dispatch
 
 jobs:
   gitleaks:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: DariuszPorowski/github-action-gitleaks@v2
